<resources>
    <string name="app_name">Survei Berkah Sehat</string>
    <string name="field_kode_faskes">Kode Faskes</string>
    <string name="field_nama_faskes">Nama Faskes</string>
    <string name="field_tanggal_berkunjung">Tanggal Berkunjung</string>
    <string name="field_nomor_bpjs">Masukkan nomor kartu BPJS Kesehatan Anda</string>
    <string name="field_nama_responden">Masukkan nama Anda</string>
    <string name="kode_faskes"> : 0196B007</string>
    <string name="nama_faskes"> : KLINIK BINA SEHAT PPNI</string>
    <string name="tanggal"> : Tanggal Sekarang</string>
    <string name="question_1">Apakah hari dan jam praktik pelayanan sesuai dengan yang tercantum pada papan nama fasilitas kesehatan?</string>
    <string name="question_saran">Berikan saran Anda</string>
    <string name="mulai">Mulai</string>
    <string name="kembali">Kembali</string>
    <string name="lanjut">Berikutnya</string>
    <string name="selesai">Selesai</string>
</resources>
