<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@drawable/background"
    android:padding="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearSurvey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/radioAnswer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/radioYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="YA" />

            <RadioButton
                android:id="@+id/radioNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TIDAK" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/radioAnswer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/radioYes1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="YA" />

            <RadioButton
                android:id="@+id/radioNo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TIDAK" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnKembali"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kembali" />

            <Button
                android:id="@+id/btnBerikutnya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lanjut" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearSaran"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputSaran"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_saran" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnKembaliSaran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kembali" />

            <Button
                android:id="@+id/btnSelesai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/selesai" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>